Karan_EKS/eks_manifests/deployments/app_spot_instances.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::<YOUR_AWS_ACCOUNT>:role/eks-dev-ns-role
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/os: linux
        lifecycle: Ec2Spot
      tolerations:
        - key: "spotInstance"
          operator: "Equal"
          value: "true"
          effect: "PreferNoSchedule"
