Karan_EKS/eks_manifests/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2
  namespace: dev
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
